--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <body>
 <h1> Ici le titre principal </h1>
+<p> Je viens d'éditer ce fichier sur GitHub <p>
+<p> Je viens d'éditer en local ! <p>
 <p> Et voilà le texte de la page</p>
 <h2> On peut créer jusqu'à six niveaux de titres en HTML </h2>
 <p> Et voici un autre paragraphe </p> 
